--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div id="file-select-container">
             <label for="file-dropdown">Choose a Quiz:</label>
             <select id="file-dropdown">
-                <option value="Zaydan_Abacus_P1.html">Practice Paper P1</option>
+                <option value="https://musakkhir.github.io/abacus-quiz/Zaydan_Abacus_P1.html">Practice Paper P1</option>
                 <option value="Zaydan_Abacus_P2.html">Practice Paper P2</option>
                 <option value="Zaydan_Abacus_P3.html">Practice Paper P3</option>
                 <option value="Zaydan_Abacus_P4.html">Practice Paper P4</option>
