--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <option value="Zaydan_Abacus_P4.html">Practice Paper P4</option>
                 <option value="Zaydan_Abacus_P5.html">Practice Paper P5</option>
                 <option value="Zaydan_Abacus_P6.html">Practice Paper P6</option>
-                <option value="Zaydan_Abacus_P7.html">Practice Paper P7</option>
+                <option value="https://musakkhir.github.io/abacus-quiz/Zaydan_Abacus_P7.html">Practice Paper P7</option>
                 <option value="Zaydan_Abacus_P8.html">Practice Paper P8</option>
                 <option value="Zaydan_Abacus_P9.html">Practice Paper P9</option>
                 <option value="Zaydan_Abacus_P10.html">Practice Paper P10</option>
