--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <option value="Zaydan_Abacus_P17.html">Practice Paper P17</option>
                 <option value="Zaydan_Abacus_P18.html">Practice Paper P18</option>
                 <option value="Zaydan_Abacus_P19.html">Practice Paper P19</option>
-                <option value="Zaydan_Abacus_P20.html">Practice Paper P20</option>
+                <option value="https://musakkhir.github.io/abacus-quiz/Zaydan_Abacus_P20.html">Practice Paper P20</option>
             </select>
         </div>
 
