--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
         }
 
     </style>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XD4S8V6M09"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XD4S8V6M09');
+</script>
 </head>
 <body class="bg-gray-100">
     <div class="container">
