--- a/Zaydan_Abacus_P19.html
+++ b/Zaydan_Abacus_P19.html
@@ -465,7 +465,7 @@
     <script>
         const quizData = [
   {
-    "question": "29\\n10\\n-05\\n-14\\n23",
+    "question": "29\n10\n-05\n-14\n23",
     "options": [
       "23",
       "33",
@@ -475,7 +475,7 @@
     "correctAnswer": "43"
   },
   {
-    "question": "35\\n04\\n-11\\n-05\\n21",
+    "question": "35\n04\n-11\n-05\n21",
     "options": [
       "34",
       "54",
@@ -485,7 +485,7 @@
     "correctAnswer": "44"
   },
   {
-    "question": "57\\n-52\\n03\\n31\\n10",
+    "question": "57\n-52\n03\n31\n10",
     "options": [
       "59",
       "39",
@@ -495,7 +495,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "76\\n-06\\n02\\n05\\n01",
+    "question": "76\n-06\n02\n05\n01",
     "options": [
       "68",
       "78",
@@ -505,7 +505,7 @@
     "correctAnswer": "78"
   },
   {
-    "question": "90\\n-30\\n09\\n-15\\n25",
+    "question": "90\n-30\n09\n-15\n25",
     "options": [
       "39",
       "49",
@@ -515,7 +515,7 @@
     "correctAnswer": "79"
   },
   {
-    "question": "83\\n06\\n-28\\n08\\n-04",
+    "question": "83\n06\n-28\n08\n-04",
     "options": [
       "65",
       "95",
@@ -525,7 +525,7 @@
     "correctAnswer": "65"
   },
   {
-    "question": "79\\n-12\\n20\\n-25\\n11",
+    "question": "79\n-12\n20\n-25\n11",
     "options": [
       "33",
       "63",
@@ -535,7 +535,7 @@
     "correctAnswer": "73"
   },
   {
-    "question": "95\\n04\\n-35\\n-02\\n06",
+    "question": "95\n04\n-35\n-02\n06",
     "options": [
       "68",
       "28",
@@ -545,7 +545,7 @@
     "correctAnswer": "68"
   },
   {
-    "question": "55\\n44\\n-54\\n-20\\n13",
+    "question": "55\n44\n-54\n-20\n13",
     "options": [
       "18",
       "28",
@@ -555,7 +555,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "95\\n-05\\n06\\n-46\\n23",
+    "question": "95\n-05\n06\n-46\n23",
     "options": [
       "43",
       "23",
@@ -565,7 +565,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "60\\n22\\n-12\\n04\\n-03",
+    "question": "60\n22\n-12\n04\n-03",
     "options": [
       "71",
       "41",
@@ -575,7 +575,7 @@
     "correctAnswer": "71"
   },
   {
-    "question": "77\\n02\\n-21\\n-06\\n05",
+    "question": "77\n02\n-21\n-06\n05",
     "options": [
       "77",
       "27",
@@ -585,7 +585,7 @@
     "correctAnswer": "57"
   },
   {
-    "question": "88\\n01\\n-32\\n-05\\n11",
+    "question": "88\n01\n-32\n-05\n11",
     "options": [
       "53",
       "23",
@@ -595,7 +595,7 @@
     "correctAnswer": "63"
   },
   {
-    "question": "50\\n08\\n-07\\n42\\n-21",
+    "question": "50\n08\n-07\n42\n-21",
     "options": [
       "32",
       "92",
@@ -605,7 +605,7 @@
     "correctAnswer": "72"
   },
   {
-    "question": "49\\n-05\\n52\\n-44\\n23",
+    "question": "49\n-05\n52\n-44\n23",
     "options": [
       "53",
       "63",
@@ -615,7 +615,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "70\\n29\\n-65\\n-03\\n05",
+    "question": "70\n29\n-65\n-03\n05",
     "options": [
       "46",
       "36",
@@ -625,7 +625,7 @@
     "correctAnswer": "36"
   },
   {
-    "question": "85\\n-05\\n03\\n06\\n-04",
+    "question": "85\n-05\n03\n06\n-04",
     "options": [
       "55",
       "45",
@@ -635,7 +635,7 @@
     "correctAnswer": "85"
   },
   {
-    "question": "63\\n05\\n-17\\n01\\n02",
+    "question": "63\n05\n-17\n01\n02",
     "options": [
       "54",
       "64",
@@ -645,7 +645,7 @@
     "correctAnswer": "54"
   },
   {
-    "question": "55\\n-05\\n32\\n06\\n-07",
+    "question": "55\n-05\n32\n06\n-07",
     "options": [
       "51",
       "81",
@@ -655,7 +655,7 @@
     "correctAnswer": "81"
   },
   {
-    "question": "19\\n-16\\n-02\\n07\\n11",
+    "question": "19\n-16\n-02\n07\n11",
     "options": [
       "19",
       "29",
@@ -665,7 +665,7 @@
     "correctAnswer": "19"
   },
   {
-    "question": "68\\n-03\\n-05\\n07\\n01",
+    "question": "68\n-03\n-05\n07\n01",
     "options": [
       "78",
       "58",
@@ -675,7 +675,7 @@
     "correctAnswer": "68"
   },
   {
-    "question": "89\\n-06\\n10\\n-33\\n23",
+    "question": "89\n-06\n10\n-33\n23",
     "options": [
       "63",
       "33",
@@ -685,7 +685,7 @@
     "correctAnswer": "83"
   },
   {
-    "question": "78\\n-06\\n-01\\n02\\n01",
+    "question": "78\n-06\n-01\n02\n01",
     "options": [
       "54",
       "34",
@@ -695,7 +695,7 @@
     "correctAnswer": "74"
   },
   {
-    "question": "57\\n-05\\n21\\n15\\n10",
+    "question": "57\n-05\n21\n15\n10",
     "options": [
       "98",
       "58",
@@ -705,7 +705,7 @@
     "correctAnswer": "98"
   },
   {
-    "question": "14\\n05\\n-15\\n10\\n20",
+    "question": "14\n05\n-15\n10\n20",
     "options": [
       "54",
       "14",
@@ -715,7 +715,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "86\\n02\\n-35\\n06\\n-05",
+    "question": "86\n02\n-35\n06\n-05",
     "options": [
       "54",
       "64",
@@ -725,7 +725,7 @@
     "correctAnswer": "54"
   },
   {
-    "question": "74\\n-01\\n-13\\n05\\n03",
+    "question": "74\n-01\n-13\n05\n03",
     "options": [
       "28",
       "68",
@@ -735,7 +735,7 @@
     "correctAnswer": "68"
   },
   {
-    "question": "49\\n-02\\n-26\\n05\\n03",
+    "question": "49\n-02\n-26\n05\n03",
     "options": [
       "69",
       "49",
@@ -745,7 +745,7 @@
     "correctAnswer": "29"
   },
   {
-    "question": "47\\n-02\\n50\\n-30\\n12",
+    "question": "47\n-02\n50\n-30\n12",
     "options": [
       "27",
       "77",
@@ -755,7 +755,7 @@
     "correctAnswer": "77"
   },
   {
-    "question": "33\\n11\\n-14\\n12\\n02",
+    "question": "33\n11\n-14\n12\n02",
     "options": [
       "44",
       "24",
@@ -765,7 +765,7 @@
     "correctAnswer": "44"
   },
   {
-    "question": "39\\n-05\\n10\\n-32\\n21",
+    "question": "39\n-05\n10\n-32\n21",
     "options": [
       "33",
       "13",
@@ -775,7 +775,7 @@
     "correctAnswer": "33"
   },
   {
-    "question": "87\\n-02\\n11\\n-05\\n03",
+    "question": "87\n-02\n11\n-05\n03",
     "options": [
       "94",
       "54",
@@ -785,7 +785,7 @@
     "correctAnswer": "94"
   },
   {
-    "question": "50\\n05\\n23\\n-01\\n02",
+    "question": "50\n05\n23\n-01\n02",
     "options": [
       "89",
       "79",
@@ -795,7 +795,7 @@
     "correctAnswer": "79"
   },
   {
-    "question": "37\\n-07\\n03\\n05\\n01",
+    "question": "37\n-07\n03\n05\n01",
     "options": [
       "19",
       "49",
@@ -805,7 +805,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "90\\n03\\n-11\\n05\\n12",
+    "question": "90\n03\n-11\n05\n12",
     "options": [
       "89",
       "79",
@@ -815,7 +815,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "88\\n-02\\n-05\\n16\\n-07",
+    "question": "88\n-02\n-05\n16\n-07",
     "options": [
       "40",
       "90",
@@ -825,7 +825,7 @@
     "correctAnswer": "90"
   },
   {
-    "question": "10\\n09\\n-18\\n20\\n12",
+    "question": "10\n09\n-18\n20\n12",
     "options": [
       "23",
       "33",
@@ -835,7 +835,7 @@
     "correctAnswer": "33"
   },
   {
-    "question": "87\\n-25\\n07\\n10\\n-17",
+    "question": "87\n-25\n07\n10\n-17",
     "options": [
       "62",
       "92",
@@ -845,7 +845,7 @@
     "correctAnswer": "62"
   },
   {
-    "question": "44\\n-02\\n55\\n-27\\n14",
+    "question": "44\n-02\n55\n-27\n14",
     "options": [
       "74",
       "54",
@@ -855,7 +855,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "58\\n20\\n-18\\n-50\\n21",
+    "question": "58\n20\n-18\n-50\n21",
     "options": [
       "51",
       "21",
@@ -865,7 +865,7 @@
     "correctAnswer": "31"
   },
   {
-    "question": "11\\n22\\n01\\n05\\n-06",
+    "question": "11\n22\n01\n05\n-06",
     "options": [
       "33",
       "43",
@@ -875,7 +875,7 @@
     "correctAnswer": "33"
   },
   {
-    "question": "99\\n-44\\n10\\n-05\\n25",
+    "question": "99\n-44\n10\n-05\n25",
     "options": [
       "15",
       "75",
@@ -885,7 +885,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "68\\n-07\\n-01\\n18\\n11",
+    "question": "68\n-07\n-01\n18\n11",
     "options": [
       "89",
       "79",
@@ -895,7 +895,7 @@
     "correctAnswer": "89"
   },
   {
-    "question": "68\\n-07\\n-01\\n25\\n13",
+    "question": "68\n-07\n-01\n25\n13",
     "options": [
       "68",
       "58",
@@ -905,7 +905,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "22\\n-02\\n15\\n04\\n-13",
+    "question": "22\n-02\n15\n04\n-13",
     "options": [
       "16",
       "26",
@@ -915,7 +915,7 @@
     "correctAnswer": "26"
   },
   {
-    "question": "45\\n-05\\n09\\n-02\\n01",
+    "question": "45\n-05\n09\n-02\n01",
     "options": [
       "48",
       "38",
@@ -925,7 +925,7 @@
     "correctAnswer": "48"
   },
   {
-    "question": "99\\n-51\\n-28\\n07\\n12",
+    "question": "99\n-51\n-28\n07\n12",
     "options": [
       "99",
       "29",
@@ -935,7 +935,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "66\\n03\\n-02\\n-05\\n02",
+    "question": "66\n03\n-02\n-05\n02",
     "options": [
       "54",
       "34",
@@ -945,7 +945,7 @@
     "correctAnswer": "64"
   },
   {
-    "question": "85\\n12\\n-05\\n-31\\n21",
+    "question": "85\n12\n-05\n-31\n21",
     "options": [
       "62",
       "52",
@@ -955,7 +955,7 @@
     "correctAnswer": "82"
   },
   {
-    "question": "33\\n05\\n-16\\n02\\n20",
+    "question": "33\n05\n-16\n02\n20",
     "options": [
       "54",
       "24",
@@ -965,7 +965,7 @@
     "correctAnswer": "44"
   },
   {
-    "question": "77\\n-02\\n13\\n-06\\n11",
+    "question": "77\n-02\n13\n-06\n11",
     "options": [
       "83",
       "63",
@@ -975,7 +975,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "24\\n-01\\n25\\n-06\\n02",
+    "question": "24\n-01\n25\n-06\n02",
     "options": [
       "24",
       "44",
@@ -985,7 +985,7 @@
     "correctAnswer": "44"
   },
   {
-    "question": "44\\n-02\\n51\\n-13\\n12",
+    "question": "44\n-02\n51\n-13\n12",
     "options": [
       "92",
       "82",
@@ -995,7 +995,7 @@
     "correctAnswer": "92"
   },
   {
-    "question": "69\\n-01\\n-12\\n30\\n11",
+    "question": "69\n-01\n-12\n30\n11",
     "options": [
       "87",
       "67",
@@ -1005,7 +1005,7 @@
     "correctAnswer": "97"
   },
   {
-    "question": "57\\n30\\n-27\\n04\\n15",
+    "question": "57\n30\n-27\n04\n15",
     "options": [
       "49",
       "29",
@@ -1015,7 +1015,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "99\\n-01\\n-35\\n-02\\n31",
+    "question": "99\n-01\n-35\n-02\n31",
     "options": [
       "82",
       "62",
@@ -1025,7 +1025,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "66\\n-01\\n-05\\n08\\n01",
+    "question": "66\n-01\n-05\n08\n01",
     "options": [
       "59",
       "69",
@@ -1035,7 +1035,7 @@
     "correctAnswer": "69"
   },
   {
-    "question": "18\\n-02\\n-11\\n04\\n30",
+    "question": "18\n-02\n-11\n04\n30",
     "options": [
       "59",
       "9",
@@ -1045,7 +1045,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "66\\n03\\n-15\\n-02\\n21",
+    "question": "66\n03\n-15\n-02\n21",
     "options": [
       "43",
       "73",
@@ -1055,7 +1055,7 @@
     "correctAnswer": "73"
   },
   {
-    "question": "78\\n-27\\n11\\n05\\n12",
+    "question": "78\n-27\n11\n05\n12",
     "options": [
       "89",
       "69",
@@ -1065,7 +1065,7 @@
     "correctAnswer": "59"
   },
   {
-    "question": "50\\n26\\n-55\\n06\\n12",
+    "question": "50\n26\n-55\n06\n12",
     "options": [
       "49",
       "79",
@@ -1075,7 +1075,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "44\\n55\\n-45\\n-52\\n31",
+    "question": "44\n55\n-45\n-52\n31",
     "options": [
       "13",
       "23",
@@ -1085,7 +1085,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "28\\n-01\\n-12\\n01\\n31",
+    "question": "28\n-01\n-12\n01\n31",
     "options": [
       "67",
       "37",
@@ -1095,7 +1095,7 @@
     "correctAnswer": "47"
   },
   {
-    "question": "79\\n-21\\n-06\\n15\\n12",
+    "question": "79\n-21\n-06\n15\n12",
     "options": [
       "79",
       "69",
@@ -1105,7 +1105,7 @@
     "correctAnswer": "79"
   },
   {
-    "question": "89\\n-53\\n12\\n-25\\n11",
+    "question": "89\n-53\n12\n-25\n11",
     "options": [
       "24",
       "34",
@@ -1115,7 +1115,7 @@
     "correctAnswer": "34"
   },
   {
-    "question": "99\\n-54\\n02\\n-30\\n51",
+    "question": "99\n-54\n02\n-30\n51",
     "options": [
       "48",
       "78",
@@ -1125,7 +1125,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "39\\n-01\\n-02\\n-06\\n02",
+    "question": "39\n-01\n-02\n-06\n02",
     "options": [
       "22",
       "62",
@@ -1135,7 +1135,7 @@
     "correctAnswer": "32"
   },
   {
-    "question": "65\\n11\\n-05\\n07\\n-03",
+    "question": "65\n11\n-05\n07\n-03",
     "options": [
       "75",
       "55",
@@ -1145,7 +1145,7 @@
     "correctAnswer": "75"
   },
   {
-    "question": "26\\n-05\\n03\\n-04\\n07",
+    "question": "26\n-05\n03\n-04\n07",
     "options": [
       "47",
       "27",
@@ -1155,7 +1155,7 @@
     "correctAnswer": "27"
   },
   {
-    "question": "17\\n11\\n-05\\n06\\n-03",
+    "question": "17\n11\n-05\n06\n-03",
     "options": [
       "66",
       "56",
@@ -1165,7 +1165,7 @@
     "correctAnswer": "26"
   },
   {
-    "question": "39\\n-03\\n-05\\n07\\n01",
+    "question": "39\n-03\n-05\n07\n01",
     "options": [
       "29",
       "39",
@@ -1175,7 +1175,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "68\\n-03\\n-05\\n26\\n12",
+    "question": "68\n-03\n-05\n26\n12",
     "options": [
       "68",
       "88",
@@ -1185,7 +1185,7 @@
     "correctAnswer": "98"
   },
   {
-    "question": "39\\n-05\\n-03\\n02\\n05",
+    "question": "39\n-05\n-03\n02\n05",
     "options": [
       "38",
       "78",
@@ -1195,7 +1195,7 @@
     "correctAnswer": "38"
   },
   {
-    "question": "94\\n-02\\n05\\n-62\\n12",
+    "question": "94\n-02\n05\n-62\n12",
     "options": [
       "17",
       "37",
@@ -1205,7 +1205,7 @@
     "correctAnswer": "47"
   },
   {
-    "question": "33\\n05\\n-15\\n16\\n-22",
+    "question": "33\n05\n-15\n16\n-22",
     "options": [
       "37",
       "97",
@@ -1215,7 +1215,7 @@
     "correctAnswer": "17"
   },
   {
-    "question": "79\\n-05\\n-14\\n06\\n12",
+    "question": "79\n-05\n-14\n06\n12",
     "options": [
       "18",
       "78",
@@ -1225,7 +1225,7 @@
     "correctAnswer": "78"
   },
   {
-    "question": "45\\n-05\\n01\\n02\\n05",
+    "question": "45\n-05\n01\n02\n05",
     "options": [
       "48",
       "58",
@@ -1235,7 +1235,7 @@
     "correctAnswer": "48"
   },
   {
-    "question": "11\\n08\\n-15\\n50\\n30",
+    "question": "11\n08\n-15\n50\n30",
     "options": [
       "44",
       "64",
@@ -1245,7 +1245,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "87\\n-02\\n13\\n01\\n-04",
+    "question": "87\n-02\n13\n01\n-04",
     "options": [
       "95",
       "45",
@@ -1255,7 +1255,7 @@
     "correctAnswer": "95"
   },
   {
-    "question": "29\\n-04\\n03\\n-15\\n21",
+    "question": "29\n-04\n03\n-15\n21",
     "options": [
       "84",
       "34",
@@ -1265,7 +1265,7 @@
     "correctAnswer": "34"
   },
   {
-    "question": "77\\n-51\\n11\\n-26\\n21",
+    "question": "77\n-51\n11\n-26\n21",
     "options": [
       "21",
       "41",
@@ -1275,7 +1275,7 @@
     "correctAnswer": "31"
   },
   {
-    "question": "95\\n-45\\n11\\n-01\\n22",
+    "question": "95\n-45\n11\n-01\n22",
     "options": [
       "62",
       "42",
@@ -1285,7 +1285,7 @@
     "correctAnswer": "82"
   },
   {
-    "question": "44\\n-02\\n06\\n-16\\n05",
+    "question": "44\n-02\n06\n-16\n05",
     "options": [
       "27",
       "37",
@@ -1295,7 +1295,7 @@
     "correctAnswer": "37"
   },
   {
-    "question": "57\\n-02\\n-05\\n30\\n04",
+    "question": "57\n-02\n-05\n30\n04",
     "options": [
       "24",
       "54",
@@ -1305,7 +1305,7 @@
     "correctAnswer": "84"
   },
   {
-    "question": "77\\n12\\n-54\\n03\\n01",
+    "question": "77\n12\n-54\n03\n01",
     "options": [
       "39",
       "79",
@@ -1315,7 +1315,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "94\\n-42\\n16\\n-05\\n11",
+    "question": "94\n-42\n16\n-05\n11",
     "options": [
       "54",
       "24",
@@ -1325,7 +1325,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "88\\n-22\\n-01\\n04\\n20",
+    "question": "88\n-22\n-01\n04\n20",
     "options": [
       "69",
       "29",
@@ -1335,7 +1335,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "33\\n-02\\n-01\\n07\\n02",
+    "question": "33\n-02\n-01\n07\n02",
     "options": [
       "79",
       "39",
@@ -1345,7 +1345,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "55\\n12\\n-12\\n23\\n-15",
+    "question": "55\n12\n-12\n23\n-15",
     "options": [
       "23",
       "83",
@@ -1355,7 +1355,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "26\\n01\\n-05\\n15\\n02",
+    "question": "26\n01\n-05\n15\n02",
     "options": [
       "19",
       "39",
@@ -1365,7 +1365,7 @@
     "correctAnswer": "39"
   },
   {
-    "question": "99\\n-69\\n11\\n-21\\n12",
+    "question": "99\n-69\n11\n-21\n12",
     "options": [
       "22",
       "32",
@@ -1375,7 +1375,7 @@
     "correctAnswer": "32"
   },
   {
-    "question": "19\\n-05\\n20\\n-03\\n02",
+    "question": "19\n-05\n20\n-03\n02",
     "options": [
       "63",
       "33",
@@ -1385,7 +1385,7 @@
     "correctAnswer": "33"
   },
   {
-    "question": "78\\n-11\\n20\\n-57\\n13",
+    "question": "78\n-11\n20\n-57\n13",
     "options": [
       "33",
       "43",
@@ -1395,7 +1395,7 @@
     "correctAnswer": "43"
   },
   {
-    "question": "77\\n-01\\n-05\\n02\\n06",
+    "question": "77\n-01\n-05\n02\n06",
     "options": [
       "89",
       "69",
@@ -1405,7 +1405,7 @@
     "correctAnswer": "79"
   },
   {
-    "question": "44\\n05\\n-15\\n-02\\n11",
+    "question": "44\n05\n-15\n-02\n11",
     "options": [
       "33",
       "43",
@@ -1415,7 +1415,7 @@
     "correctAnswer": "43"
   },
   {
-    "question": "19\\n-18\\n20\\n15\\n12",
+    "question": "19\n-18\n20\n15\n12",
     "options": [
       "68",
       "18",
@@ -1425,7 +1425,7 @@
     "correctAnswer": "None of These"
   },
   {
-    "question": "66\\n-01\\n13\\n-10\\n11",
+    "question": "66\n-01\n13\n-10\n11",
     "options": [
       "59",
       "69",
@@ -1435,7 +1435,7 @@
     "correctAnswer": "79"
   },
   {
-    "question": "39\\n-02\\n-26\\n05\\n11",
+    "question": "39\n-02\n-26\n05\n11",
     "options": [
       "17",
       "27",
@@ -1445,7 +1445,7 @@
     "correctAnswer": "27"
   },
   {
-    "question": "05\\n20\\n-15\\n23\\n-11",
+    "question": "05\n20\n-15\n23\n-11",
     "options": [
       "52",
       "22",
@@ -1455,7 +1455,7 @@
     "correctAnswer": "22"
   },
   {
-    "question": "26\\n-16\\n13\\n-20\\n11",
+    "question": "26\n-16\n13\n-20\n11",
     "options": [
       "14",
       "44",
